ajouts de codes avec visual code

--- a/connexion.html
+++ b/connexion.html
@@ -8,15 +8,16 @@
 </head>
 <body>
 	<nav>
-		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"></div><a href="recherche.html"> Rechercher sur le site</a></div>
+		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="recherche.html"> Rechercher sur le site</a></div>
 		<div><a href="inscription.html">Inscription </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
 	<div>
 		<form method="POST">
 			<table>
-				<tr><td><label>Pseudonyme : </label></td>
-				<td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
-				<tr><td><label>Mot de passe : </label></td><td><input type="password" name=""></td></tr>
+				<tr><td><label>Pseudonyme : </label></td></tr>
+				<tr><td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
+				<tr><td><label>Mot de passe : </label></td></tr>
+				<tr><td><input type="password" name="" placeholder="******"></td></tr>
 			
 			<tr><td><button type="submit">Valider</button></td></tr></table>
 		</form>
