--- a/inscription.html
+++ b/inscription.html
@@ -11,27 +11,28 @@
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="connexion.html"> Connexion</a></div>
 		<div><a href="recherche.html">Rechercher sur le site </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
-	<div class="container"></div>
+	
 	<div class="porte">
 		<form method="POST">
 			<table>
-				<tr><td><label>Pseudonyme : </label></td>
-				<td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
-				<tr><td><label>Mail : </label></td>
-				<td><input type="mail" name=""></td></tr>
-				<tr><td><label>Conpfirmation de mail : </label></td>
-				<td><input type="mail" name=""></td></tr>
-				<tr><td><label>Mot de passe :</label></td>
-				<td><input type="password" name=""></td></tr>
-				<tr><td><label>Confirmation mot de passe :</label></td>
-				<td><input type="password" name=""></td></tr>
+				<tr><td><label>Pseudonyme : </label></td></tr>
+				<tr><td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
+				<tr><td><label>Mail : </label></td></tr>
+				<tr><td><input type="mail" name="" placeholder="Votre mail"></td></tr>
+				<tr><td><label>Conpfirmation de mail : </label></td></tr>
+				<td><input type="mail" name="" placeholder="Votre mail"></td></tr>
+				<tr><td><label>Mot de passe :</label></td></tr>
+				<tr><td><input type="password" name="" placeholder="******"></td></tr>
+				<tr><td><label>Confirmation mot de passe :</label></td></tr>
+				<tr><td><input type="password" name="" placeholder="******"></td></tr>
 				<tr><td><button type="submit"> Valider </button></td></tr>
 			</table>
 		</form>
 	</div>
-	<nav>
+
+	<nav class="boot">
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="index.html"> Accueil</a></div>
-		<div><a href="connexion.html">Connexion </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
+		<div><a href="page1.html"> Page1 </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
 </body>
 </html>
