--- a/recherche.html
+++ b/recherche.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/styleindex.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styleindex2.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
@@ -15,25 +15,25 @@
 	<div class="container">
 		<h1>@suivre</h1>
 		<div class="porte"></div>
-		<article>
-			<a href="page9.html"><h2>They're not aliens, they're Earth…liens!</h2></a>
-			<p><ol>
-				<li>Heh-haa! Super squeaky bum time!</li>
-				<li>No, I'll fix it. I'm good at fixing rot. Call me the Rotmeister. No, I'm the Doctor. Don't call me the Rotmeister.</li>
-				<li>Father Christmas. Santa Claus. Or as I've always known him: Jeff.</li>
-			</ol></p>
-			<span>0 comments</span>
-		</article>
-		<article>
-			<a href="page10.html"><h2>It's art! A statement on modern society, 'Oh Ain't Modern Society Awful?'!</h2></a>
-			<p><ol>
-					<li>All I've got to do is pass as an ordinary human being. Simple. What could possibly go wrong?</li>
-					<li>It's a fez. I wear a fez now. Fezes are cool.</li>
+			<article class="un">
+				<a href="page9.html"><h2>They're not aliens, they're Earth…liens!</h2></a>
+				<p><ol>
 					<li>Heh-haa! Super squeaky bum time!</li>
+					<li>No, I'll fix it. I'm good at fixing rot. Call me the Rotmeister. No, I'm the Doctor. Don't call me the Rotmeister.</li>
+					<li>Father Christmas. Santa Claus. Or as I've always known him: Jeff.</li>
 				</ol></p>
 				<span>0 comments</span>
-		</article>
-	</div>
+			</article>
+			<article class="deux">
+				<a href="page10.html"><h2>It's art! A statement on modern society, 'Oh Ain't Modern Society Awful?'!</h2></a>
+				<p><ol>
+						<li>All I've got to do is pass as an ordinary human being. Simple. What could possibly go wrong?</li>
+						<li>It's a fez. I wear a fez now. Fezes are cool.</li>
+						<li>Heh-haa! Super squeaky bum time!</li>
+					</ol></p>
+					<span>0 comments</span>
+			</article>
+		</div>
 	<div>
 		<form method="GET"><h2>Recherche</h2>
 			<label>Que recherchez vous ?</label>
