--- a/connexion.html
+++ b/connexion.html
@@ -13,7 +13,7 @@
 	</nav>
 	<div>
 		<form method="POST">
-			<table>
+			<table class="formulaire">
 				<tr><td><label>Pseudonyme : </label></td></tr>
 				<tr><td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
 				<tr><td><label>Mot de passe : </label></td></tr>
@@ -21,7 +21,12 @@
 			
 			<tr><td><button type="submit">Valider</button></td></tr></table>
 		</form>
+
+		<h2>Vous cherchez à me contacter? </h2>
+		<a href="mailto:amaella.souil@gmail.com" id="mail">Mon lien mail</a>
 	</div>
+
+
 	<nav>
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="index.html"> Accueil</a></div>
 		<div><a href="page1.html"> Page 1 </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
