--- a/inscription.html
+++ b/inscription.html
@@ -14,7 +14,7 @@
 	
 	<div class="porte">
 		<form method="POST">
-			<table>
+			<table class="formulaire">
 				<tr><td><label>Pseudonyme : </label></td></tr>
 				<tr><td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
 				<tr><td><label>Mail : </label></td></tr>
