--- a/page8.html
+++ b/page8.html
@@ -57,7 +57,7 @@
 				</form>
 
 			</div>
-	<nav>
+	<nav class="boot">
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="page7.html"> Précédent</a></div>
 		<div><a href="page9.html">Suivant </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
