--- a/page9.html
+++ b/page9.html
@@ -55,7 +55,7 @@
 				</form>
 
 			</div>
-	<nav>
+	<nav class="boot">
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="page8.html"> Précédent</a></div>
 		<div><a href="page10.html">Suivant </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
