--- a/recherche.html
+++ b/recherche.html
@@ -47,7 +47,7 @@
 			</ul>
 		</div>
 	</div>
-	<nav>
+	<nav class="boot">
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="#"> Top</a></div>
 		<div><a href="page1.html">Suivant </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
