--- a/page10.html
+++ b/page10.html
@@ -48,7 +48,7 @@
 		<input type="textarea" placeholder="Votre commentaire ici">
 		<button>Envoyer</button>
 	</form>
-	<nav>
+	<nav class="boot">
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="page9.html"> Précédent</a></div>
 		<div><a href="#">Top </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
