--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
 				</form>
 
 			</div>
-	<nav>
+	<nav class="boot">
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="page1.html"> Précédent</a></div>
 		<div><a href="page3.html">Suivant </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
