--- a/page5.html
+++ b/page5.html
@@ -58,7 +58,7 @@
 				</form>
 
 			</div>
-	<nav>
+	<nav class="boot">
 		<div><img src="assets/img/dalek-gau.gif" height="30" width="30"><a href="page4.html"> Précédent</a></div>
 		<div><a href="page6.html">Suivant </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
