--- a/inscription.html
+++ b/inscription.html
@@ -19,7 +19,7 @@
 				<tr><td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
 				<tr><td><label>Mail : </label></td></tr>
 				<tr><td><input type="mail" name="" placeholder="Votre mail"></td></tr>
-				<tr><td><label>Conpfirmation de mail : </label></td></tr>
+				<tr><td><label>Confirmation de mail : </label></td></tr>
 				<td><input type="mail" name="" placeholder="Votre mail"></td></tr>
 				<tr><td><label>Mot de passe :</label></td></tr>
 				<tr><td><input type="password" name="" placeholder="******"></td></tr>
