--- a/inscription.html
+++ b/inscription.html
@@ -12,9 +12,9 @@
 		<div><a href="recherche.html">Rechercher sur le site </a><img src="assets/img/dalekd.jpg" height="30" width="30"></div>
 	</nav>
 	
-	<div class="porte">
+	<div class="formulaire">
 		<form method="POST">
-			<table class="formulaire">
+			<table>
 				<tr><td><label>Pseudonyme : </label></td></tr>
 				<tr><td><input type="text" name="" placeholder="Votre pseudo"></td></tr>
 				<tr><td><label>Mail : </label></td></tr>
